# ATR_System

./: README.md
Code/ros2_ws/src/: README.md
Code/ros2_ws/src/atr_bot/: CMakeLists.txt  package.xml
Code/ros2_ws/src/atr_bot/src/: atr_bot.cpp
Code/ros2_ws/src/atr_bringup/: CMakeLists.txt  package.xml
Code/ros2_ws/src/atr_bringup/atr_bringup/: config_parser.py
Code/ros2_ws/src/atr_bringup/launch/: atr_launch.py  atr_tracker_launch.py  main_launch.py  visualisation_launch.py
Code/ros2_ws/src/atr_bringup/params/: node_config_params.yaml
Code/ros2_ws/src/atr_interfaces/: CMakeLists.txt  package.xml
Code/ros2_ws/src/atr_interfaces/msg/: ATRState.msg  ATRStateList.msg  ATRTimeStamps.msg  ATRTimeStampsArray.msg  TimeStampRobot.msg
Code/ros2_ws/src/atr_interfaces/srv/: ChangeListPublisherSrv.srv  ChangeWatchdogSrv.srv  ConnectionSrv.srv  StartMeasurementSrv.srv  WakeupSrv.srv
Code/ros2_ws/src/atr_tracker/: CMakeLists.txt  package.xml
Code/ros2_ws/src/atr_tracker/src/: atr_state_list_listener.cpp  atr_tracker.cpp
Code/ros2_ws/src/atr_visualisation/: CMakeLists.txt  package.xml
Code/ros2_ws/src/atr_visualisation/include/atr_visualisation/: ATRStateListSubscriber.h  AuxTools.h
Code/ros2_ws/src/atr_visualisation/rviz/: visualisation.rviz
Code/ros2_ws/src/atr_visualisation/src/: ATRStateListSubscriber.cpp  AuxTools.cpp
Code/ros2_ws/src/atr_visualisation/src/Applications/: atr_state_list_subscriber.cpp
Documentation/: README.md
Documentation/Thesis/: README.md
